--- a/core/applib/build.gradle
+++ b/core/applib/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     compile libraries.datanucleus_api_jdo    
     compile libraries.datanucleus_jdo_query    
     
-    testCompile project(":core-unittestsupport")
+    testCompile libraries.isis_core_unittestsupport
 
     // as used by ClassDiscoveryServiceUsingReflections     
     compile libraries.reflections
